Fixed issue https://github.com/Chiefbark/AEM-Docs/issues/3